--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.10'
+    ext.kotlin_version = '1.8.20'
     ext.appcompat_version = "1.1.0"
     ext.core_ktx_version = "1.3.2"
     ext.constraint_version = "2.0.4"
@@ -23,11 +23,10 @@ buildscript {
     ext.kotlin_coroutines_version = "1.7.1"
     ext.lifecycle_version = "2.6.1"
 
-    ext.dagger_version = "2.30.1"
     ext.activity_ktx_version = "1.7.2"
     ext.fragment_ktx_version = '1.6.0'
 
-    ext.hilt_version = '2.36'
+    ext.hilt_version = '2.46.1'
     ext.hilt_jetpack_version = '1.0.0-alpha03'
 }
 
@@ -37,4 +36,12 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'com.android.dynamic-feature' version '8.0.2' apply false
     id 'com.google.dagger.hilt.android' version '2.46.1' apply false
+}
+
+allprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
 }
