--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ buildscript {
 
     ext.hilt_version = '2.46.1'
     ext.hilt_jetpack_version = '1.0.0-alpha03'
+
+    ext.leak_canary_version = '2.10'
+
+    ext.database_sqlcipher_version = '4.4.0'
+    ext.sqlite_ktx_version = '2.3.1'
 }
 
 plugins {
